[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="Sagebrush"
# dynamic = ["version"]
version = "v0.0.1"
dependencies = [
    "dripline",
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["dripline.extensions", "dripline.extensions.*","sagebrush","sagebrush.*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["Dockerfile", "examples"]

[tool.setuptools.dynamic]
version = {attr = "my_package.VERSION"}
